# Capacity-Planning

CapacityPlanningAPI/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
CapacityPlanningAPI/alembic/: env.py
CapacityPlanningAPI/alembic/versions/: b7e80ff751a5_initial_schema.py
CapacityPlanningAPI/app/: __init__.py  cli.py  demo_data.py  main.py
CapacityPlanningAPI/app/api/: pagination.py
CapacityPlanningAPI/app/api/v1/: router.py
CapacityPlanningAPI/app/api/v1/routes/: admin.py  employees.py  integrations.py  reports.py  sprints.py  system.py  teams.py
CapacityPlanningAPI/app/application/: services.py
CapacityPlanningAPI/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
CapacityPlanningAPI/app/domain/: __init__.py  capacity.py  risks.py
CapacityPlanningAPI/app/infrastructure/: cache.py  repositories.py
CapacityPlanningAPI/app/infrastructure/database/: base.py  session.py
CapacityPlanningAPI/app/infrastructure/external_services/: __init__.py  jira.py  payspace.py
CapacityPlanningAPI/app/models/: __init__.py  entities.py
CapacityPlanningAPI/app/schemas/: __init__.py  contracts.py
CapacityPlanningAPI/app/workers/: celery_app.py  tasks.py
CapacityPlanningAPI/docs/: architecture.md  requirements.md
CapacityPlanningAPI/tests/: conftest.py
CapacityPlanningAPI/tests/integration/: test_api_flow.py  test_demo_data.py  test_system.py
CapacityPlanningAPI/tests/unit/: test_capacity.py  test_config.py  test_database.py  test_risks.py  test_security_and_adapters.py
(+98 files in other folders)
